<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="org.eclipse.keyple.famoco.validator.ui.activities.SettingsActivity">

    <include layout="@layout/logo_toolbar" android:id="@+id/appBarLayout"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.60" />

    <CheckBox
        android:id="@+id/batteryPoweredBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/settings_horizontal_padding"
        app:layout_constraintEnd_toStartOf="@+id/batteryPoweredText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineTop"
        app:layout_constraintBottom_toTopOf="@id/locationView"
        app:layout_constraintVertical_chainStyle="spread_inside"
        android:buttonTint="@color/blue"
        />

    <TextView
        android:id="@+id/batteryPoweredText"
        android:text="@string/battery_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/mediumRegularBlue"
        android:layout_marginStart="@dimen/settings_box_text_start_margin"
        app:layout_constraintStart_toEndOf="@id/batteryPoweredBox"
        app:layout_constraintTop_toBottomOf="@id/guidelineTop" />

    <LinearLayout
        android:id="@+id/locationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/settings_horizontal_padding"
        android:layout_marginEnd="@dimen/settings_horizontal_padding"
        app:layout_constraintBottom_toTopOf="@+id/timeBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/batteryPoweredBox"
        android:orientation="vertical">

        <TextView
            android:id="@+id/locationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_label"
            style="@style/mediumBoldBlue"
            android:layout_marginBottom="@dimen/settings_edit_margin_bottom" />

        <EditText
            android:id="@+id/locationEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="location"
            android:hint="@string/location_hint"
            android:inputType="text"
            android:textColorHint="@color/blue"
            app:backgroundTint="@color/blue"
            style="@style/mediumRegularBlue" />
    </LinearLayout>


    <Button
        android:id="@+id/timeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_label"
        android:layout_marginStart="@dimen/settings_horizontal_padding"
        android:layout_marginEnd="@dimen/settings_horizontal_padding"
        style="@style/whiteBtnText"
        android:background="@drawable/btn_blue"
        app:layout_constraintBottom_toTopOf="@id/guidelineBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/locationView" />

    <TextView
        android:id="@+id/startLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_label"
        style="@style/bigBoldBlue"
        android:layout_marginBottom="@dimen/settings_edit_margin_bottom"
        app:layout_constraintBottom_toTopOf="@id/startBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineBottom"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageButton
        android:id="@+id/startBtn"
        android:layout_width="@dimen/settings_start_ic_size"
        android:layout_height="@dimen/settings_start_ic_size"
        android:src="@drawable/ic_start"
        android:scaleType="fitXY"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@id/eclipseLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startLabel"
        android:contentDescription="@string/start_label" />

    <ImageView
        android:id="@+id/eclipseLogo"
        android:layout_width="@dimen/eclipse_logo_width"
        android:layout_height="@dimen/eclipse_logo_height"
        android:src="@drawable/ic_logo_eclipse"
        android:scaleType="center"
        android:background="@android:color/transparent"
        android:contentDescription="@string/eclipse_foundation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/home_element_margin" />

</androidx.constraintlayout.widget.ConstraintLayout>