<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020 Calypso Networks Association https://www.calypsonet-asso.org/
  ~
  ~ See the NOTICE file(s) distributed with this work for additional information
  ~ regarding copyright ownership.
  ~
  ~ This program and the accompanying materials are made available under the terms of the
  ~ Eclipse Public License 2.0 which is available at http://www.eclipse.org/legal/epl-2.0
  ~
  ~ SPDX-License-Identifier: EPL-2.0
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.eclipse.keyple.famoco.validator.ui.activities.HomeActivity"
    android:background="@drawable/ic_img_bg_valideur">

    <include
        layout="@layout/logo_toolbar"
        android:id="@+id/appBarLayout" />

    <TextView
        android:id="@+id/homeDescription"
        android:layout_width="@dimen/home_text_width"
        android:layout_height="wrap_content"
        android:text="@string/home_description"
        style="@style/bigRegularWhite"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/home_element_margin" />

    <ImageButton
        android:id="@+id/startBtn"
        android:layout_width="@dimen/home_start_btn_width"
        android:layout_height="@dimen/home_start_btn_width"
        android:src="@drawable/ic_start_white"
        android:scaleType="fitXY"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/start_validation_label" />

    <TextView
        android:id="@+id/startLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_validation_label"
        style="@style/bigBoldWhite"
        android:layout_marginTop="@dimen/home_start_text_margin_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startBtn" />

    <ImageView
        android:id="@+id/eclipseLogo"
        android:layout_width="@dimen/eclipse_logo_width"
        android:layout_height="@dimen/eclipse_logo_height"
        android:src="@drawable/ic_logo_eclipse"
        android:scaleType="center"
        android:background="@android:color/transparent"
        android:contentDescription="@string/eclipse_foundation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/home_element_margin" />

</androidx.constraintlayout.widget.ConstraintLayout>