<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020 Calypso Networks Association https://www.calypsonet-asso.org/
  ~
  ~ See the NOTICE file(s) distributed with this work for additional information
  ~ regarding copyright ownership.
  ~
  ~ This program and the accompanying materials are made available under the terms of the
  ~ Eclipse Public License 2.0 which is available at http://www.eclipse.org/legal/epl-2.0
  ~
  ~ SPDX-License-Identifier: EPL-2.0
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_img_bg_valideur">

    <include
        layout="@layout/logo_toolbar"
        android:id="@+id/appBarLayout" />

    <TextView
        android:id="@+id/home_description"
        android:layout_width="@dimen/home_text_width"
        android:layout_height="wrap_content"
        android:text="@string/home_description"
        style="@style/bigRegularWhite"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/home_element_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.80" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.40" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.70" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.80" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation"
        android:layout_width="@dimen/reading_animation_size"
        android:layout_height="0dp"
        app:lottie_fileName="present_card_white.json"
        app:lottie_autoPlay="true"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toTopOf="@id/guideline_top" />

    <TextView
        android:id="@+id/presentCardTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/present_card"
        style="@style/bigBoldWhite"
        android:fontFamily="@font/worksans_bold"
        app:layout_constraintBottom_toTopOf="@id/guideline_bottom"
        app:layout_constraintEnd_toEndOf="@id/guideline_right_txt"
        app:layout_constraintStart_toStartOf="@id/guideline_left_txt"
        android:gravity="center"/>

    <ImageView
        android:id="@+id/eclipse_logo"
        android:layout_width="@dimen/eclipse_logo_width"
        android:layout_height="@dimen/eclipse_logo_height"
        android:src="@drawable/ic_logo_eclipse"
        android:scaleType="center"
        android:background="@android:color/transparent"
        android:contentDescription="@string/eclipse_foundation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/home_element_margin" />

</androidx.constraintlayout.widget.ConstraintLayout>